artifacts/Green/pvt-alb-ingress-sustainability-nprod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: qcloud
    ingress.cloud.tencent.com/auto-rewrite: "true"
    # To specify a private network CLB subnet, uncomment and set the following annotation:
    # kubernetes.io/ingress.subnetId: <TENCENT_SUBNET_ID>
  name: pvt-alb-ingress-sustainability-nprod
  namespace: alb-nprod
spec:
  tls:
  - secretName: sustainability-nprod-cert-secret
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /loadpage/*
        pathType: ImplementationSpecific
